--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
+<head>
+	{{! Fonts }}
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Unica+One&display=swap" rel="stylesheet">
+
+	{{! Style }}
+	<link rel="stylesheet" href="/styles.css" />
+	<style>
+		:root {
+			--gender: #ffffff;
+		}
+	</style>
+</head>
 
 <body>
 
-	<h1>My First Heading</h1>
-	<p>My first paragraph.</p>
+	<header>Gender.Fan</header>
+	<div id="fan">
+		<div id="pointer"></div>
+	</div>
 
 </body>
 
