--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -8,7 +8,7 @@
 
 	{{! Style }}
 	<link rel="stylesheet" href="/styles.css" />
-	<style>
+	<style id="colorRoot">
 		:root {
 			--gender: #ffffff;
 		}
