--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -19,8 +19,8 @@ body {
 	}
 }
 
-$colorMale: rgba(0,183,255,1);
-$colorFemale: rgba(255,0,183,1);
+$colorMale: rgba(0,140,255,1);
+$colorFemale: rgba(255,0,140,1);
 $colorNB: mix($colorMale, $colorFemale);
 $colorAgender: rgba(255,255,255,1);
 $colorPointer: rgb(66, 66, 66);
@@ -31,10 +31,10 @@ $colorPointer: rgb(66, 66, 66);
 	margin: 5rem auto;
 	border-radius: 20rem 20rem 0 0;
 	position: relative;
-	background: $colorAgender;
 	background:
 		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0)),
-		linear-gradient(90deg, $colorFemale, $colorNB 40%, $colorNB 60%, $colorMale 100%);
+		linear-gradient(90deg, rgba($colorMale, 0), rgba($colorMale, 1)),
+		$colorFemale;
 	box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.35);
 }
 
