labels and dynamic text color

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -8,11 +8,6 @@
 
 	{{! Style }}
 	<link rel="stylesheet" href="/styles.css" />
-	<style id="colorRoot">
-		:root {
-			--gender: #ffffff;
-		}
-	</style>
 </head>
 
 <body>
@@ -20,6 +15,9 @@
 	<header>Gender.Fan</header>
 	<div id="fan">
 		<div id="pointer"></div>
+		<label class="female">Female</label>
+		<label class="agender">Agender</label>
+		<label class="male">Male</label>
 	</div>
 
 </body>
