--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,29 +1,51 @@
-html {
-	padding: 0;
-	margin: 0;
-}
-
 $screenTablet: 800px;
-
-$colorHeader: rgb(44, 44, 44);
-$colorFont: rgb(255, 255, 255);
-$colorActiveGender: var(--gender);
-
-body {
-	font-family: 'PT Sans', sans-serif;
-	padding: 0.5rem 0.75rem;
-	background: $colorActiveGender;
-
-	@media (min-width: $screenTablet) {
-		padding: 2rem;
-	}
-}
 
 $colorMale: rgba(0,140,255,1);
 $colorFemale: rgba(255,0,140,1);
 $colorNB: mix($colorMale, $colorFemale);
 $colorAgender: rgba(255,255,255,1);
 $colorPointer: rgb(66, 66, 66);
+
+$colorActiveGender: var(--gender);
+
+@mixin body-font {
+	font-family: 'PT Sans', sans-serif;
+}
+@mixin header-font {
+	font-family: 'Unica One', cursive;
+}
+@mixin transition ($properties) {
+	transition-duration: 100ms;
+	transition-duration: $properties;
+}
+@mixin active-text-color {
+	color: var(--text);
+	@include transition(color);
+}
+
+:root {
+	--gender: #{rgba($colorNB, 0.65)};
+	--dark-text: rgb(90, 90, 90);
+	--light-text: rgb(250, 250, 250);
+	--text: var(--light-text);
+}
+
+html {
+	padding: 0;
+	margin: 0;
+}
+
+body {
+	@include body-font();
+	@include active-text-color();
+	padding: 0.5rem 0.75rem;
+	background-color: $colorActiveGender;
+	@include transition(background-color);
+
+	@media (min-width: $screenTablet) {
+		padding: 2rem;
+	}
+}
 
 #fan {
 	width: 40rem;
@@ -32,10 +54,54 @@ $colorPointer: rgb(66, 66, 66);
 	border-radius: 20rem 20rem 0 0;
 	position: relative;
 	background:
-		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0)),
-		linear-gradient(90deg, rgba($colorMale, 0), rgba($colorMale, 1)),
-		$colorFemale;
+		// the radial gradient looks better lower, even though it should be 100%
+		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0) 85%),
+		linear-gradient(135deg, rgba($colorMale, 0) 35%, rgba($colorMale, 1) 100%),
+		linear-gradient(-135deg, rgba($colorFemale, 0) 35%, rgba($colorFemale, 1) 100%),
+		$colorNB;
 	box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.35);
+	display: grid;
+	grid-template-columns: auto;
+  grid-template-rows: auto;
+	grid-template-areas:
+		"   .   nonbinary nonbinary  .  "
+		"female  agender   agender  male";
+
+	label {
+		@include header-font();
+		@include active-text-color();
+		opacity: 0.7;
+		user-select: none;
+		font-weight: bold;
+		font-size: 1.25rem;
+
+		@mixin center { justify-self: center; }
+		@mixin bottom {
+			align-self: end;
+			margin-bottom: -2em;
+		}
+
+		&.female {
+			grid-area: female;
+			justify-self: left;
+			@include bottom();
+		}
+		&.male {
+			grid-area: male;
+			justify-self: right;
+			@include bottom();
+		}
+		&.nonbinary {
+			grid-area: nonbinary;
+			@include center();
+			align-self: start;
+		}
+		&.agender {
+			grid-area: agender;
+			@include center();
+			@include bottom();
+		}
+	}
 }
 
 #pointer {
@@ -51,6 +117,7 @@ $colorPointer: rgb(66, 66, 66);
 	margin-top: -0.5 * $circleSize;
 	margin-left: -0.5 * $circleSize;
 	display: none;
+	@include transition(top left transform background-color);
 
 	&:before {
 		position: absolute;
@@ -78,10 +145,9 @@ $colorPointer: rgb(66, 66, 66);
 
 header {
 	text-align: center;
-	font-family: 'Unica One', cursive;
+	@include header-font();
+	@include active-text-color();
 	font-size: 4rem;
 	height: 4rem;
-	color: white;
-	opacity: 0.4;
-	text-shadow: 0 0 0.5rem black;
+	opacity: 0.7;
 }
