--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -55,10 +55,8 @@ body {
 	position: relative;
 	background:
 		// the radial gradient looks better lower, even though it should be 100%
-		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0) 85%),
-		linear-gradient(135deg, rgba($colorMale, 0) 35%, rgba($colorMale, 1) 100%),
-		linear-gradient(-135deg, rgba($colorFemale, 0) 35%, rgba($colorFemale, 1) 100%),
-		$colorNB;
+		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0) 90%),
+		conic-gradient(from 0.75turn at 50% 100%, $colorFemale, $colorMale, $colorFemale);
 	box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.35);
 	display: grid;
 	grid-template-columns: auto;
