--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -13,14 +13,14 @@
 <body>
 
 	<header>Gender.Fan</header>
-	<div id="fan">
-		<div id="pointer"></div>
+	<div id="fan-container">
 		<label class="female">Female</label>
 		<label class="agender">Agender</label>
 		<label class="male">Male</label>
+		<svg id="fan"></svg>
 	</div>
 
 </body>
 
-	<script src="./js/index.js" type="text/javascript"></script>
+<script src="./js/index.js" type="text/javascript"></script>
 </html>
