--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -47,23 +47,36 @@ body {
 	}
 }
 
-#fan {
+#fan-container {
 	width: 40rem;
 	height: 20rem;
 	margin: 5rem auto;
-	border-radius: 20rem 20rem 0 0;
 	position: relative;
-	background:
-		// the radial gradient looks better lower, even though it should be 100%
-		radial-gradient(at 50% 100%, $colorAgender, rgba($colorAgender, 0) 90%),
-		conic-gradient(from 0.75turn at 50% 100%, $colorFemale, $colorMale, $colorFemale);
-	box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.35);
+	// background: rgba(0, 0, 0, 0.15);
+	// box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.35);
 	display: grid;
 	grid-template-columns: auto;
   grid-template-rows: auto;
 	grid-template-areas:
-		"   .   nonbinary nonbinary  .  "
-		"female  agender   agender  male";
+		"   .   . nonbinary .  .  "
+		"female .  agender  . male";
+
+	path {
+		&.selected {
+			stroke: rgba(0, 0, 0, 0.25);
+			stroke-width: 0.15rem;
+		}
+	}
+
+	svg {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+	}
 
 	label {
 		@include header-font();
@@ -73,7 +86,10 @@ body {
 		font-weight: bold;
 		font-size: 1.25rem;
 
-		@mixin center { justify-self: center; }
+		@mixin center {
+			justify-self: center;
+			margin-left: -1em;
+		}
 		@mixin bottom {
 			align-self: end;
 			margin-bottom: -2em;
