--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,7 +15,7 @@ $colorActiveGender: var(--gender);
 	font-family: 'Unica One', cursive;
 }
 @mixin transition ($properties) {
-	transition-duration: 100ms;
+	transition-duration: 250ms;
 	transition-duration: $properties;
 }
 @mixin active-text-color {
@@ -62,9 +62,11 @@ body {
 		"female .  agender  . male";
 
 	path {
+		@include transition(fill);
+
 		&.selected {
-			stroke: rgba(0, 0, 0, 0.25);
-			stroke-width: 0.15rem;
+			filter: drop-shadow( 0 0 1rem rgba(0, 0, 0, .7));
+			// fill: rgba(0, 0, 0, 0.251);
 		}
 	}
 
@@ -72,6 +74,7 @@ body {
 		width: 100%;
 		height: 100%;
 		position: absolute;
+		overflow: visible;
 		left: 0;
 		right: 0;
 		top: 0;
