share icons, no functionality

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -19,8 +19,21 @@
 		<label class="male">Male</label>
 		<svg id="fan"></svg>
 	</div>
-
+	<div id="share">
+		<label>Share:</label>
+		<a id="share-facebook">
+			<ion-icon name="logo-facebook"></ion-icon>
+		</a>
+		<a id="share-twitter">
+			<ion-icon name="logo-twitter"></ion-icon>
+		</a>
+		<a id="share-link">
+			<ion-icon name="link-outline"></ion-icon>
+		</a>
+	</div>
 </body>
 
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="./js/index.js" type="text/javascript"></script>
 </html>
