--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -47,6 +47,13 @@ body {
 	}
 }
 
+label {
+	@include header-font();
+	@include active-text-color();
+	opacity: 0.7;
+	font-weight: bold;
+}
+
 #fan-container {
 	width: 40rem;
 	height: 20rem;
@@ -90,11 +97,7 @@ body {
 	}
 
 	label {
-		@include header-font();
-		@include active-text-color();
-		opacity: 0.7;
 		user-select: none;
-		font-weight: bold;
 		font-size: 1.25rem;
 
 		@mixin center {
@@ -136,4 +139,23 @@ header {
 	font-size: 4rem;
 	height: 4rem;
 	opacity: 0.7;
+}
+
+#share {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	font-size: 1.75em;
+
+	ion-icon {
+		margin-left: 1em;
+		opacity: 0.6;
+		@include transition(opacity, filter);
+
+		&:hover {
+			opacity: 0.9;
+			filter: drop-shadow( 0 0 .5rem rgba(0, 0, 0, .25));
+		}
+	}
 }
