--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -147,6 +147,7 @@ header {
 	align-items: center;
 	justify-content: center;
 	font-size: 1.75em;
+	margin-top: 8rem;
 
 	ion-icon {
 		margin-left: 1em;
